--- a/servicios-details.html
+++ b/servicios-details.html
@@ -20,6 +20,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Dosis:300,400,500,,600,700,700i|Lato:300,300i,400,400i,700,700i" rel="stylesheet">
 
+    <!-- Bootstrap CSS CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
     <!-- Archivo CSS Templai -->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -30,10 +33,6 @@
 
 
 </head>
-
-  <!-- ======= DIV ENVOLVENTE -GRID ======= -->
-
-<div class="contenedor-wrapper">
 
   <!-- ======= Top Bar ======= -->
     <section id="topbar" class="topbar">
@@ -258,8 +257,7 @@
 
     <a href="#navbar" class="scroll-up"><i class="bx bxs-up-arrow-square"></i></a>
 
-</div>
-
-  <!-- =======  TERMINA DIV ENVOLVENTE -GRID ======= -->
+<!-- Bootstrap JS CDN -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 <body>
