--- a/servicios-details.html
+++ b/servicios-details.html
@@ -24,7 +24,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
     <!-- Archivo CSS Templai -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/estilos.css">
 
     <!-- Archivo JS navbar -->
 
@@ -35,15 +35,15 @@
 </head>
 
   <!-- ======= Top Bar ======= -->
-    <section id="topbar" class="topbar">
-        <div class="container-topbar">
+    <section id="topbar" class="d-flex align-items-center">
+        <div class="container d-flex justify-content-center justify-content-md-between">
 
-            <div class="contact-info-top">
+            <div class="contact-info-top d-flex align-items-center">
                 <i class="bx bx-mail-send"></i><a href="mailto:contact@example.com">info@maribeautyclinic.com.ar</a>
                 <i class="bx bx-mobile-alt phone-icon"></i><a href="#">+54 15 3040-5060</a> 
             </div>
 
-            <div class="social-links-top">
+            <div class="social-links-top d-none d-md-block">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
