--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     
+    <!-- Bootstrap CSS icons -->
+    <link href="assets/css/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    
     <!-- Archivo CSS Templai -->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -637,6 +640,9 @@
 <!--Termina el Footer-->
 
 <a href="#navbar" class="scroll-up"><i class="bx bxs-up-arrow-square"></i></a>
+
+<!-- Templay main archivo JS-->
+<script src="assets/js/main.js"></script>
 
 <!-- Bootstrap JS CDN -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
