cambios en el section Hero

--- a/index.html
+++ b/index.html
@@ -72,15 +72,6 @@
         <!-- En caso se puede usar una imagen png para el logon-->
         <!-- <a href="index.html" class="logo"><img src="assets/img/new-logo-mary-beauty.png" alt="" class="img-fluid"></a> -->
 
-
-        <!-- menu de navegacion o navbar ---ALTERNATIVA -->
-
-        <!-- <input type="checkbox" id="check">
-        <label for="check">
-            <i class="fa fa-bars" id="btn"></i>
-            <i class="fa fa-times" id="cancel"></i>
-        </label> -->
-
         <nav id="navbar" class="navbar">
             <ul>
                 <!-- <button class="nav-toggle" aria-label="Abrir menu">
@@ -130,10 +121,10 @@
 
 <!--Inicio de Home- tambien denominado Hero -->
 
-<section id="hero" class="hero">
+<section id="hero" class="d-flex align-items-center">
     <div class="container">
         <div class="row">
-            <div class="orde-text">
+            <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
                 <h2>
                     En Mari Beauty Clinic Sabemos de Belleza
                 </h2>
@@ -142,7 +133,7 @@
                   acorde a las necesidades de cada cliente. Conocé más todos nuestros servicios y comunicate con nosotros para coordinar una reunión de diagnóstico sin costo  
                 </h3>
             </div >
-            <div class="img-hero"> 
+            <div class="col-lg-6 order-1 order-lg-2 hero-img"> 
                 <img src="assets/img/hero-img-3.png" alt="estetica belleza corporal" class="img-hero-variante">
             </div>
 
