--- a/servicios-details.html
+++ b/servicios-details.html
@@ -27,7 +27,7 @@
     <link href="assets/css/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Archivo CSS Templai -->
-    <link rel="stylesheet" href="assets/css/estilos.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- Archivo JS navbar -->
     <!-- <script src="https://kit.fontawesome.com/7e5b2d153f.js" crossorigin="anonymous"></script> -->
@@ -67,21 +67,8 @@
             <!-- En caso se puede usar una imagen png para el logon-->
             <!-- <a href="index.html" class="logo"><img src="assets/img/new-logo-mary-beauty.png" alt="" class="img-fluid"></a> -->
 
-
-            <!-- menu de navegacion o navbar ---ALTERNATIVA -->
-
-            <!-- <input type="checkbox" id="check">
-            <label for="check">
-                <i class="fa fa-bars" id="btn"></i>
-                <i class="fa fa-times" id="cancel"></i>
-            </label> -->
-
             <nav id="navbar" class="navbar">
                 <ul>
-                    <!-- <button class="nav-toggle" aria-label="Abrir menu">
-                        <li class="fas fa-bars"></li>
-                    </button> -->
-
                     <li><a class="nav-link scrollto" href="index.html">Home</a></li>
                     <li><a class="nav-link scrollto" href="#nosotros">Nosotros</a></li>
                     <li class="dropdown"><a class="navbar-link active" href="#servicios"><span>Servicios</span><i class="bx bxs-chevron-down js-arrow arrow w"></i></i></a>
@@ -109,6 +96,7 @@
                         </ul>
                     </li>
                     <li><a class="nav-link scrollto" href="#paquetes">Paquetes</a></li>
+                    <li><a class="nav-link scrollto" href="#equipo">Equipo</a></li>
                     <li><a class="nav-link scrollto" href="#contacto">Contacto</a></li>
                 </ul>
                 <!-- <div class="search">
