--- a/index.html
+++ b/index.html
@@ -31,10 +31,6 @@
 
     <!-- Archivo CSS Templai -->
     <link rel="stylesheet" href="assets/css/style.css">
-
-    <!-- Archivo JS navbar -->
-
-    <!-- <script src="https://kit.fontawesome.com/7e5b2d153f.js" crossorigin="anonymous"></script> -->
     
 
 
@@ -207,7 +203,7 @@
       </div>
     </div> -->
 
-    <div class="row portfolio-container">
+    <div class="row portfolio-pagination">
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-app">
         <div class="portfolio-wrap">
@@ -379,6 +375,28 @@
 
     </div>
 
+    <div class="row porfolio-panina">
+
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item">
+            <a class="page-link" href="#" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item">
+            <a class="page-link" href="#" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+    </div>
+
   </div>
 </section>
 
@@ -409,7 +427,7 @@
                   <li class="list-group-item">(4) Sesiones de Ondas de Choque</li>
                   <li class="list-group-item">(2) Sesiones de Drenaje</li>
                 </ul>
-                <a href="#" class="btn btn-primary">Contactanos</a>
+                <a href="#" class="btn btn-primary">Reservar</a>
               </div>
             </div>
           </div>
@@ -425,7 +443,7 @@
                   <li class="list-group-item">(2) Sesiones de Ondas de Choque</li>
                   <li class="list-group-item">(2) Meso Anticelulitis</li>
                 </ul>
-                <a href="#" class="btn btn-primary">Contactanos</a>
+                <a href="#" class="btn btn-primary">Reservar</a>
               </div>
             </div>
           </div>
@@ -439,7 +457,7 @@
                   <li class="list-group-item">(4) Sesiones de Mio-Up</li>
                   <li class="list-group-item">(2) Sesiones de Meso Anti-Flacidez</li>
                 </ul>
-                <a href="#" class="btn btn-primary">Contactanos</a>
+                <a href="#" class="btn btn-primary">Reservar</a>
               </div>
             </div>
           </div>
@@ -456,7 +474,7 @@
                   <li class="list-group-item">(1) Altafrecuencia Facial</li>
                   <li class="list-group-item">(1) Mascarilla con Acido Hialuronico</li>
                 </ul>
-                <a href="#" class="btn btn-primary">Contactanos</a>
+                <a href="#" class="btn btn-primary">Reservar</a>
               </div>
             </div>
           </div>
@@ -470,7 +488,7 @@
                   <li class="list-group-item">(1) RadioFrecuencia Facial</li>
                   <li class="list-group-item">(1) Meso con Vitamina C</li>
                 </ul>
-                <a href="#" class="btn btn-primary">Contactanos</a>
+                <a href="#" class="btn btn-primary">Reservar</a>
               </div>
             </div>
           </div>
@@ -484,7 +502,7 @@
                   <li class="list-group-item">(1) Plasma Rico en Plaquetas</li>
                   <li class="list-group-item">(1) RadioFrecuencia Facial</li>
                 </ul>
-                <a href="#" class="btn btn-primary">Contactanos</a>
+                <a href="#" class="btn btn-primary">Reservar</a>
               </div>
             </div>
           </div>
@@ -561,7 +579,7 @@
 <!---- Termina Section Equipo ---->
 
 <!-- Inicio de Section Contacto -->
-<section id="contact" class="contact">
+<section id="contacto" class="contact">
   <div class="container">
 
     <div class="section-title">
