--- a/servicios-details.html
+++ b/servicios-details.html
@@ -118,10 +118,10 @@
 
     <section id="descripcion" class="descripcion">
 
-        <div class="contenedor">
+        <div class="container">
 
             <div class="d-flex justify-content-between align-items-center">
-              <h2 class="detalle">Descripción Del Tratamiento</h2>
+              <h2>Descripción Del Tratamiento</h2>
               <ol>
                 <li><a href="index.html">Home</a></li>
                 <li>Detalles</li>
@@ -142,14 +142,34 @@
     <main id="main">
 
     <!-- Inicia Section -Detalles del Servicio -->
-    <section id="servicio-details" class="servicio-details">
+    <section id="portfolio-details" class="portfolio-details">
+      <div class="container">
 
-        <div class="container-flex">
-            <div class="servicio-imagen">
-              <img src="assets/img/criolipolisis-coolsculpting.jpg" alt="muestra-1" class="imagen-muestra">
+        <div class="row gy-4">
+
+          <div class="col-lg-8">
+            <div class="portfolio-details-slider swiper">
+              <div class="swiper-wrapper align-items-center">
+
+                <div class="swiper-slide">
+                  <img src="assets/img/criolipolisis/tratamientos-corporal-con-criolipolisis-perfectia-4.jpg" alt="">
+                </div>
+
+                <!-- <div class="swiper-slide">
+                  <img src="assets/img/criolipolisis/que-es-coolsculpting-FB.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/criolipolisis/criolipolisis-ellos-4.jpg" alt="">
+                </div> -->
+
+              </div>
+              <div class="swiper-pagination"></div>
             </div>
-            
-            <div class="servicio-info">
+          </div>
+
+          <div class="col-lg-4">
+            <div class="portfolio-info">
               <h3>Criolipolisis</h3>
               <ul>
                 <li><strong>Tratamiento</strong>: Corporal</li>
@@ -158,15 +178,17 @@
                 <li><strong>Agendar Cita</strong>: 15 3355-XXXX</li>
               </ul>
             </div>
-            <div class="servicio-descripcion">
-              <h2>Tratamiento con Crioliposis </h2>
+            <div class="portfolio-description">
+              <h2>This is an example of portfolio detail</h2>
               <p>
-                La criolipólisis es un método que ayuda eliminar la grasa localizada mediante el enfriamiento -8 grados. Con una sesión puedes 
-                perder de 5 a 10 cm dependiendo de su metabolismo.Los resultados se podrán observar a partir de la 4ta semana posterior al tratamiento.
+                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
               </p>
             </div>
           </div>
 
+        </div>
+
+      </div>
     </section>
     <!-- Termina Section -Detalles del Servicio -->
 
