--- a/servicios-details.html
+++ b/servicios-details.html
@@ -23,14 +23,12 @@
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-    <!-- Bootstrap CSS icons -->
-    <link href="assets/css/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <!-- Bootstrap CSS vendor -->
+    <link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
     <!-- Archivo CSS Templai -->
     <link rel="stylesheet" href="assets/css/style.css">
-
-    <!-- Archivo JS navbar -->
-    <!-- <script src="https://kit.fontawesome.com/7e5b2d153f.js" crossorigin="anonymous"></script> -->
 
 
 
@@ -155,13 +153,13 @@
                   <img src="assets/img/criolipolisis/tratamientos-corporal-con-criolipolisis-perfectia-4.jpg" alt="">
                 </div>
 
-                <!-- <div class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="assets/img/criolipolisis/que-es-coolsculpting-FB.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
                   <img src="assets/img/criolipolisis/criolipolisis-ellos-4.jpg" alt="">
-                </div> -->
+                </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -276,5 +274,8 @@
 
 <!-- Bootstrap JS CDN -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
+<!-- Archive JS vendor -->
+<script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
 
 <body>
