--- a/servicios-details.html
+++ b/servicios-details.html
@@ -177,9 +177,10 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Tratamiento con Crioliposis</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                La criolipólisis es un método que ayuda eliminar la grasa localizada mediante el enfriamiento -8 grados. Con una sesión puedes 
+                perder de 5 a 10 cm dependiendo de su metabolismo.Los resultados se podrán observar a partir de la 4ta semana posterior al tratamiento.
               </p>
             </div>
           </div>
