cambios en porfolio Details

--- a/servicios-details.html
+++ b/servicios-details.html
@@ -153,13 +153,13 @@
                   <img src="assets/img/criolipolisis/tratamientos-corporal-con-criolipolisis-perfectia-4.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                   <img src="assets/img/criolipolisis/que-es-coolsculpting-FB.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
                   <img src="assets/img/criolipolisis/criolipolisis-ellos-4.jpg" alt="">
-                </div>
+                </div> -->
 
               </div>
               <div class="swiper-pagination"></div>
