cambios en portfolio -servicos

--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
       <div class="col-lg-12 d-flex justify-content-center">
         <ul id="portfolio-flters">
           <li data-filter="*" class="filter-active">All</li>
-          <li data-filter=".filter-app">App</li>
-          <li data-filter=".filter-card">Card</li>
-          <li data-filter=".filter-web">Web</li>
+          <li data-filter=".filter-facial">Facial</li>
+          <li data-filter=".filter-corporal">Corporal</li>
+          <li data-filter=".filter-gluteos">Gluteos</li>
         </ul>
       </div>
     </div> -->
@@ -213,7 +213,7 @@
             <h4>Criolipolisis</h4>
             <p>Tratamiento reductor de grasa adiposa</p>
             <div class="portfolio-links">
-              <a href="/assets/img/criolipolisis/que-es-coolsculpting-FB.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+              <a href="/assets/img/criolipolisis/que-es-coolsculpting-FB.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Corporal 1"><i class="bx bx-plus"></i></a>
               <a href="servicios-details.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -227,7 +227,7 @@
             <h4>Botox</h4>
             <p>Reducir arrugas y líneas de expresión </p>
             <div class="portfolio-links">
-              <a href="/assets/img/botox/botox-terapia.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+              <a href="/assets/img/botox/botox-terapia.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Facial 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -241,7 +241,7 @@
             <h4>Depilaser</h4>
             <p>Eliminar vello en distintas zonas</p>
             <div class="portfolio-links">
-              <a href="/assets/img/Depilaser/depilacion-lase-definitiva.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+              <a href="/assets/img/Depilaser/depilacion-lase-definitiva.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Corporal 2"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -255,7 +255,7 @@
             <h4>Dermapen</h4>
             <p>Mejorar aspecto y textura de la piel</p>
             <div class="portfolio-links">
-              <a href="/assets/img/dermapen/metodo-facial-dermapen.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+              <a href="/assets/img/dermapen/metodo-facial-dermapen.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Facial 2"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -269,7 +269,7 @@
             <h4>Himfu</h4>
             <p>Eliminar tejido graso subcutáneo</p>
             <div class="portfolio-links">
-              <a href="/assets/img/Himfu/himfu.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+              <a href="/assets/img/Himfu/himfu.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Corporal 2"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -283,7 +283,7 @@
             <h4>Lifting</h4>
             <p>Estiramiento de la piel para eliminar arrugas</p>
             <div class="portfolio-links">
-              <a href="/assets/img/lifting/Aumento-de-gluteos-con-acido-hialuronico-3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+              <a href="/assets/img/lifting/Aumento-de-gluteos-con-acido-hialuronico-3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Facial 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -297,7 +297,7 @@
             <h4>Limpieza Facial</h4>
             <p>Limpieza y tratamiento rejuvenecedor </p>
             <div class="portfolio-links">
-              <a href="/assets/img/limpieza-facial/limpieza-facial.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+              <a href="/assets/img/limpieza-facial/limpieza-facial.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Facial 1"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -311,7 +311,7 @@
             <h4>Mesolifting</h4>
             <p>Rejuvenecimiento de la piel y atenuación de las arrugas</p>
             <div class="portfolio-links">
-              <a href="/assets/img/mesolifting/mesolifting-cuello.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
+              <a href="/assets/img/mesolifting/mesolifting-cuello.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Facial 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -325,7 +325,7 @@
             <h4>Mesoterapia</h4>
             <p>Reducir celulitis y tejido adiposo</p>
             <div class="portfolio-links">
-              <a href="/assets/img/mesoterpia/mesoteparia-gluteo.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+              <a href="/assets/img/mesoterpia/mesoteparia-gluteo.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Gluteos 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -339,7 +339,7 @@
             <h4>Velashape</h4>
             <p>Reducir el contorno corporal y la celulitis</p>
             <div class="portfolio-links">
-              <a href="/assets/img/velashape/Velashape-mari-beauty-clinic.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+              <a href="/assets/img/velashape/Velashape-mari-beauty-clinic.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Gluteos 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -353,7 +353,7 @@
             <h4>Radiofrecuencia Corporal</h4>
             <p>Combatir la flacidez y la celulitis</p>
             <div class="portfolio-links">
-              <a href="/assets/img/velaslim/Radiofrecuencia-corporal.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+              <a href="/assets/img/velaslim/Radiofrecuencia-corporal.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Facial 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -367,7 +367,7 @@
             <h4>Velaslim</h4>
             <p>Reducir circunferencia corporal y la celulitis</p>
             <div class="portfolio-links">
-              <a href="/assets/img/velaslim/radiofrecuencia-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+              <a href="/assets/img/velaslim/radiofrecuencia-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Corporal 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
